Changed nav color and fixed text alignment

--- a/style.css
+++ b/style.css
@@ -43,6 +43,9 @@ nav {
   border-bottom: 1px inset var(--sixth-color);
 }
 
+.index-toggler {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
 img {
   border-radius: 10px;
 }
@@ -85,7 +88,7 @@ h3 {
 .projects-link {
   color: var(--fifth-color);
   padding: 20px 22px;
-  background: #d8ada0;
+  background: var(--fourth-color);
   box-shadow: var(--box-shadow);
 }
 
@@ -95,7 +98,8 @@ h3 {
   border: 2px solid var(--fourth-color);
 }
 
-p {
+p,
+.about-info {
   font-size: 20px;
 }
 
@@ -135,12 +139,12 @@ p {
   #about-page {
     background: rgb(216, 173, 160, 0.1) !important;
   }
-  .about-me-footer {
-    background: rgb(216, 173, 160, 0.2) !important;
+
+  .current-page-link {
+    border-bottom: none;
   }
-  .about-icons {
-    border: none !important;
-    background: none !important;
+  .about-info {
+    font-size: 15px !important;
   }
 }
 
@@ -177,4 +181,15 @@ p {
 
 .about-icons:hover {
   box-shadow: var(--box-shadow);
+}
+.about-nav {
+  color: var(--fourth-color);
+}
+.about-toggler {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(216, 173, 160)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.about-info {
+  margin-top: 100px;
+  padding: 20px 90px 0px;
 }
